# Edu-FLow-Backend

./: .gitignore  README.md  haider.py  main.py  pyproject.toml  testing.MD  v2.py
alembic/: env.py
alembic/versions/: 8db9bd375ac6_sync_fk_constraints.py  df937d4d3ee7_add_presentations_table.py
src/: __init__.py  seed_sudo_admin.py
src/core/: config.py  jwt_handler.py
src/db/: main.py  models.py
src/llms/: QwenLLM.py  groq.py  openai.py
src/models/: admin_schema.py  auth_schema.py  books_schema.py  chapter_schema.py  presentation_schema.py  quiz_schema.py  sudo_admin_schema.py
src/prompts/: exercise_answering_prompt.txt  exercise_extraction_prompt.txt  ppt_prompt.txt  prompt_manager.py  prompt_returner.py  quiz_prompt.txt  summary_prompt.txt
src/prompts/summary/: map_prompt.txt  mixed_prompt.txt  reduce_prompt.txt  strict_prompt.txt
src/rag/: pipeline.py
src/routes/: Book_routes.py  admin_routes.py  auth_routes.py  book_ingestion_routes.py  book_routes.py  chapter_routes.py  new_book_routes.py  quiz_routes.py  routes.py  student_routes.py  sudo_admin_routes.py  teacher_routes.py
src/services/: auth_service.py  book_ingestion_services.py  cloudinary_service.py  db_summary_service.py  email_service.py  ingestion_service.py  map_service.py  reduce_service.py  summary_service.py  summary_service_MR.py
src/services/ai_services/: book_ingestion_services.py  presentation_service.py
src/services/db_services/: admin_service.py  auth_service.py  book_service.py  (+4 more)
src/utils/: cloudinary_utils.py  db_utils.py  image_utils.py  jwt_handler.py  llm_json_parser.py  pdf_extractor.py  presenton_utils.py  token_limiter.py
testing/: test_ingestion.py  test_retrieval.py
